# aiush

./: .gitignore  CMakeLists.txt  Makefile  README.org
.github/workflows/: cmake-single-platform.yml
include/: history.hpp  matching.hpp  recommend.hpp  weigh.hpp
include/tests/: test-weigh.hpp
lib/: #recommend.cpp#  .#recommend.cpp  history.cpp  match_function.cpp  recommend.cpp  weigh.cpp
src/: aiush  main.c  main.cpp  match_function.cpp  shell.cpp  weigh.cpp
tests/: CMakeLists.txt  test-history.cpp  test-history.hpp  test-main.cpp  test-match.cpp  test-match.hpp  test-recommend.cpp  test-recommend.hpp  test-weigh.cpp  test-weigh.hpp
